--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-adecco",
+  "name": "challenge-adecco",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.0.0",
-    "@types/react": "18.2.5",
-    "@types/react-dom": "18.2.3",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.4.0",
+    "@hookform/resolvers": "3.1.0",
+    "@reduxjs/toolkit": "1.9.5",
     "next": "13.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-hook-form": "7.43.9",
+    "react-redux": "8.0.5",
+    "styled-components": "6.0.0-beta.2",
+    "yup": "1.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.0.0",
+    "@types/react": "18.2.5",
+    "@types/react-dom": "18.2.3",
+    "@types/yup": "0.32.0",
+    "@types/styled-components": "5.1.26",
+    "typescript": "5.0.4",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.4.0"
   }
 }
