--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "3.1.0",
     "@reduxjs/toolkit": "1.9.5",
+    "axios": "1.4.0",
     "next": "13.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,10 +24,10 @@
     "@types/node": "20.0.0",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
-    "@types/yup": "0.32.0",
     "@types/styled-components": "5.1.26",
-    "typescript": "5.0.4",
+    "@types/yup": "0.32.0",
     "eslint": "8.39.0",
-    "eslint-config-next": "13.4.0"
+    "eslint-config-next": "13.4.0",
+    "typescript": "5.0.4"
   }
 }
