--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "3.1.0",
     "@reduxjs/toolkit": "1.9.5",
     "axios": "1.4.0",
+    "framer-motion": "10.12.9",
     "next": "13.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
